[package]
name = "hub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hub"
path = "src/main.rs"

[dependencies]
clap = "4.0.27"
color-eyre = { version = "0.6.2", default-features = false }
tokio = { version = "1.22.0", features = ["full"] }
tokio-retry = "0.3.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-tree = "0.2.2"
