[package]
name = "hub"
version = "0.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hub"
path = "src/main.rs"

[dependencies]
bytes = "1.3.0"
clap = { version = "4.0.27", features = ["derive"] }
color-eyre = { version = "0.6.2", default-features = false }
derive_more = "0.99.17"
futures = "0.3.25"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
thiserror = "1.0.37"
tokio = { version = "1.22.0", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-tree = "0.2.2"

[features]
